# mcp_aemps

./: .env  .gitignore  .mcp_aemps.json  Dockerfile  LICENSE  README.md  claude_desktop_config.json  docker-compose.yml  mcp.json  openapi.json  pyproject.toml  requirements.txt
app/: cima_client.py  cli.py  config.py  dependencies.py  docs_utils.py  helpers.py  mcp_aemps.json  mcp_aemps_server.py  mcp_constants.py  startup.py
test/: api_test.ipynb  test-secciones.ipynb  test-suministros.ipynb
