[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mcp_aemps"
version = "0.1.0"
description = "Servidor FastAPI-MCP para AEMPS CIMA + CLI de arranque / Docker"
authors = ["Román Pérez Dumpert <roman.p98@gmail.com>"]
packages = [
  { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.9"
fastapi-mcp = "^0.3.4"
httpx = "^0.28.1"
uvicorn = "^0.34.0"
typer = "^0.15.2"
pillow = "^11.2.1"
openpyxl = "^3.1.5"
aioredis = "^2.0.1"
fastapi-cache2 = "^0.2.2"
fastapi-limiter = "^0.1.6"
passlib[bcrypt]
python-jose[cryptography]

[tool.poetry.scripts]
mcp_aemps = "app.cli:cli"